@@ -1,3 +1,8 @@
+2009-03-23  John Dallaway  <john@dallaway.org.uk>
+
+	* include/hal_platform_setup.h: Tweak LED manipulation routines to
+	allow building for Thumb.
+
 2009-01-31  Bart Veer <bartv@ecoscentric.com>
 
 	* cdl/hal_arm_at91_eb42.cdl: update compiler flags for gcc 4.x
@@ -57,7 +62,7 @@
 // ####GPLCOPYRIGHTBEGIN####                                                
 // -------------------------------------------                              
 // This file is part of eCos, the Embedded Configurable Operating System.   
-// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2003 Free Software Foundation, Inc.
+// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2003, 2009 Free Software Foundation, Inc.
 //
 // This program is free software; you can redistribute it and/or modify     
 // it under the terms of the GNU General Public License as published by     
